# trying-reverse-proxy-swagger

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  demo.proto  note.txt  service.proto
google/api/: BUILD.bazel  annotations.proto  http.proto
