load("@com_github_grpc_ecosystem_grpc_gateway//protoc-gen-openapiv2:defs.bzl", "protoc_gen_openapiv2")

proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    deps = [
        "//google/api:annotations_proto",
    ],
)

protoc_gen_openapiv2(
    name = "openapiv2",
    proto = ":service_proto",
)