load("@com_github_grpc_ecosystem_grpc_gateway//protoc-gen-openapiv2:defs.bzl", "protoc_gen_openapiv2")

proto_library(
    name = "demo_proto",
    srcs = ["demo.proto"],
    deps = [
        "//google/api:annotations_proto",
        "//google/api:visibility_proto",
        "//protoc-gen-openapiv2/options:options_proto",
    ],
)

protoc_gen_openapiv2(
    name = "openapiv2_demo",
    proto = ":demo_proto",
)
